--- a/projeto-concreta/WebApis/ConcretaAPI/ConcretaAPI/ConcretaAPI/ConcretaAPI.csproj
+++ b/projeto-concreta/WebApis/ConcretaAPI/ConcretaAPI/ConcretaAPI/ConcretaAPI.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\AtualizarEstaConcluido.cs" />
+    <Compile Remove="Models\Class.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
