--- a/projeto-concreta/WebSites/vercel.json
+++ b/projeto-concreta/WebSites/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "dist/projeto-concreta/server/main.js",
+        "src": "dist/projeto-concreta/server/main.server.mjs", 
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/dist/projeto-concreta/server/main.js"
+        "dest": "/dist/projeto-concreta/server/main.server.mjs"  
       }
     ]
   }
